# OpenModality

./: .gitignore  Makefile.in  README.md  bootstrap
admin/conf/: limine.conf
admin/service/: Makefile
admin/service/rts/: Makefile  rts.S
sdk/: Makefile
sdk/inc/lib/: stdarg.h  stdbool.h  string.h
sdk/inc/sys/: atomic.h  cdefs.h  elf.h  errno.h  limits.h  mman.h  param.h  queue.h  types.h  units.h
sdk/string/: itoa.c  memcmp.c  memcpy.c  memset.c  strcmp.c  strlen.c  vsnprintf.c
sys/hive/: Makefile
sys/hive/acpi/: acpi.c
sys/hive/arch/amd64/: Makefile  tsc.c
sys/hive/arch/amd64/conf/: link.ld
sys/hive/arch/amd64/core/: aswap.S  panic.S
sys/hive/arch/amd64/cpu/: cpu.c  gdt.S  idt.c  locore.S  pmap.c  prim.S  trap.c  tss.c  uvec.S  vector.S
sys/hive/arch/amd64/io/: timer.c  uart.S
sys/hive/bpt/: limine.c
sys/hive/core/: Makefile  bpt.c  elfload.c  epoch.c  initrd.c  panic.c  spinlock.c  timer.c  trace.c
sys/hive/inc/acpi/: acpi.h  tables.h
sys/hive/inc/arch/amd64/: frame.h  gdt.h  idt.h  kfence.h  msr.h  tsc.h  tss.h  vas.h
sys/hive/inc/boot/: limine.h
sys/hive/inc/core/: bpt.h  elfload.h  initrd.h  panic.h  spinlock.h  timer.h  trace.h
sys/hive/inc/mm/: memvar.h  pmem.h  vmem.h
sys/hive/inc/mu/: aswap.h  cpu.h  panic.h  pmap.h  timer.h  uart.h
sys/hive/inc/ob/: dir.h  knode.h
sys/hive/inc/os/: pool.h
sys/hive/mm/: pmem.c  tlsf.c  vmem.c
sys/hive/ob/: dir.c  knode.c  store.c
sys/hive/os/: pool.c
tools/: iso-limine.sh
user/: link.ld
var/: configure.ac
